#
# MIT License
#
# Copyright (c) 2023 nbiotcloud
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#

[project]
name = "ucdp"
version = "0.1.0"
description = "Unified Chip Design Platform"
readme = "README.md"
authors = [
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
packages = [
    "src/ucdp/",
]
requires-python = ">=3.10.0,<4.0"
dependencies = [
    "pydantic>=2.7.0",
]

[project.urls]
"Homepage" = "https://github.com/nbiotcloud/ucdp"
"Documentation" = "https://ucdp.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/nbiotcloud/ucdp/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.dev-dependencies]
format = [
    "pre-commit>=3.5.0",
]
test = [
    "coveralls>=3.3.1",
    "pytest-cov>=5.0.0",
]
checktypes = [
    "mypy>=1.9.0",
]
doc = [
    "mkdocs-material>=9.5.18",
    "mkdocstrings-python>=1.9.2",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-include-markdown-plugin>=6.0.5",
]

[tool.ruff]
line-length = 120
fix = true
target-version = "py310"
[tool.ruff.lint]
select = [
    # isort
    "I",
    # pyflakes
    "F",
    # pycodestyle
    "E", "W",
    # pydocstyle
    "D",
    # flake8-2020
    "YTT",
    # flake8-bugbear
    "B",
    # flake8-quotes
    "Q",
    # flake8-debugger
    "T10",
    # flake8-gettext
    "INT",
    # pylint
    "PL",
    # misc lints
    "PIE",
    # flake8-pyi
    "PYI",
    # tidy imports
    "TID",
    # implicit string concatenation
    "ISC",
    # type-checking imports
    "TCH",
    # comprehensions
    "C",
    # pygrep-hooks
    "PGH",
    # Ruff-specific rules
    "RUF",
    # flake8-bandit: exec-builtin
    "S102",
    # numpy-legacy-random
    "NPY002",
    # Perflint
    "PERF",
    # flynt
    "FLY",
    # flake8-logging-format
    "G",
    # pyupgrade
    "UP",
]
ignore = [
    # # too-many-arguments
    # 'PLR0913',
    # # Ambiguous
    # 'ISC001',
    # # support type: ignore
    # 'PGH003',
    # # poetry deviates
    # 'RUF200',
    # Ambiguous doc
    'D203', 'D212', 'D402', 'D406',
    # # Multiline doc is ok.
    # 'D200',
    # # We use the class for constructor doc
    # 'D107',
    # # We keep legacy on Optional[] and Union[]
    # 'UP007',
    # # Magic method documentation is optional
    # 'D105',
    # # Section underline
    # 'D407',
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = """
    --cov ucdp
    --cov-report term
    --cov-report html
    --doctest-glob=docs/*
    --doctest-modules
    --ignore=noxfile.py
    --ignore-glob=tests/testdata*
    --log-level=DEBUG
    --junitxml=report.xml
"""
filterwarnings = [
    "error",
]

[tool.coverage.report]
exclude_lines = [
    'return NotImplemented',
    'raise NotImplementedError()',
    'pragma: no cover',
    'assert False',
]
